--- a/bankist-app.html
+++ b/bankist-app.html
@@ -190,6 +190,6 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
